[svn r10216] xhtml fix and stylesheet fix replacing id="grey" with class="invisible"
see
http://www.dokeos.com/forum/viewtopic.php?t=7905#32242

--- a/main/css/default/default.css
+++ b/main/css/default/default.css
@@ -782,12 +782,6 @@ a.personal_agenda:hover, a.personal_agenda:hover {color: #666666; }
 #message textarea {margin: 10px 0;}
 #message td {padding: 4px;}
 
-/* Course info text in grey*/
-
-#grey{
-	color:#808080;
-}
-
 /**********************************************
  *  DOCUMENT MODULE                           *
  **********************************************/
